2000-06-13  Martin Baulig  <baulig@suse.de>

	* Makefile.am (EXTRA_DIST): Added `gnome-gettext.m4'.
	(gnome_aclocal_DATA): Added `gnome-gettext.m4'.

2000-05-29  Martin Baulig  <baulig@suse.de>

	* gnome-autogen.sh: Moved to the `bin/' directory.

2000-05-29  Martin Baulig  <baulig@suse.de>

	* gnome-autogen.sh: If `USE_GNOME_2_MACROS' is set, use the
	GNOME 2.0 macros from the `macros2' directory.

2000-05-29  Martin Baulig  <baulig@suse.de>

	* gnome-common.m4, Makefile.am: Install macros to
	`$(datadir)/aclocal/gnome-macros' when INSIDE_GNOME_COMMON.

	* gnome-autogen.sh: New file. When using gnome-common instead
	of the macros/ directory, use this in your autogen.sh.

2000-05-15  Russell Steinthal  <rms39@columbia.edu>

	* gnome-pilot.m4 (PILOT_LIBS): An attempt to fix the gnome-pilot
	check on Solaris (`$GNOME_CONFIG ...` returns more than one word,
	so we need quotes around it to keep test from bombing out)

2000-05-01  Dan Winship  <danw@helixcode.com>

	* gnome-pilot.m4 (PILOT_LIBS): "But that trick NEVER works!"
	"This time for sure!"

Sun Apr 23 12:15:14 2000  George Lebl <jirka@5z.com>

	* gnome.m4: add an extra lib of docklets.  These checks are
	  braindamaged though, they don't fail and thus gnome-core for
	  example compiles without gnomecc.  There need to be separate .m4
	  files or checks

2000-04-19  Eskil Heyn Olsen  <deity@eskil.dk>

	* gnome-pilot.m4 (PILOT_LIBS): Changed the error string for gnome-pilot
	(PILOT_LIBS): Fixes the gnome-config check

2000-04-10  Dan Winship  <danw@helixcode.com>

	* gnome-pilot.m4 (PILOT_LIBS): Fix a bug introduced in the
	gnome-pilot-config to "gnome-config gpilot" change that caused not
	having pilot-link installed to become a fatal error.

2000-02-26  James Henstridge  <james@daa.com.au>

	* gnome-gettext.m4: fix up check of LINGUAS variable so that we don't
	get problems when LINGUAS contains `en' and ALL_LINGUAS contains
	`en_GB' for instance.

2000-02-22  Martin Baulig  <martin@home-of-linux.org>
